--- a/pipes-p2p.cabal
+++ b/pipes-p2p.cabal
@@ -1,38 +1,47 @@
-name:                pipes-p2p
-version:             0.4
-cabal-version:       >=1.10
-tested-with:         GHC == 7.6.3, GHC == 7.8.4, GHC == 7.10.1
-build-type:          Simple
-homepage:            https://github.com/jdnavarro/pipes-p2p
-license:             BSD3
-license-file:        LICENSE
-author:              Danny Navarro
-maintainer:          Danny Navarro <j@dannynavarro.net>
-category:            Network, Pipes
-synopsis:            P2P network nodes with pipes
-description:
-  Toy library to facilitate the creation of custom P2P networks using `pipes`.
+cabal-version: 1.12
 
-extra-source-files: CHANGELOG.md README.md
+-- This file has been generated from package.yaml by hpack version 0.33.1.
+--
+-- see: https://github.com/sol/hpack
+--
+-- hash: b026f9de7107431b4777399816f56b4a3d3918525ae6229225027e28618e26cf
+
+name:           pipes-p2p
+version:        0.5
+description:    Please see the README on GitHub at <https://github.com/cornelius-sevald/pipes-p2p#readme>
+homepage:       https://github.com/cornelius-sevald/pipes-p2p#readme
+bug-reports:    https://github.com/cornelius-sevald/pipes-p2p/issues
+author:         Cornelius Sevald-Krause
+maintainer:     cornelius.sevald@protonmail.com
+copyright:      2020 Cornelius Sevald-Krause
+license:        BSD3
+license-file:   LICENSE
+build-type:     Simple
+extra-source-files:
+    README.md
 
 source-repository head
-    type: git
-    location: git://github.com/jdnavarro/pipes-p2p.git
+  type: git
+  location: https://github.com/cornelius-sevald/pipes-p2p
 
 library
-  exposed-modules:     Pipes.Network.P2P
-  hs-source-dirs:      src
-  default-language:    Haskell2010
-  ghc-options:         -Wall
-  build-depends:       base >=4.6 && <4.9,
-                       async >=2,
-                       binary >=0.7,
-                       mtl >=2,
-                       bytestring >=0.10,
-                       errors >=1.4,
-                       exceptions >=0.6,
-                       pipes >=0.4,
-                       pipes-concurrency >=2.0.3,
-                       pipes-network >=0.6,
-                       network >=2.4,
-                       network-simple-sockaddr >= 0.2
+  exposed-modules:
+      Pipes.Network.P2P
+  other-modules:
+      Paths_pipes_p2p
+  hs-source-dirs:
+      src
+  build-depends:
+      async >=2.2.2
+    , base >=4.7 && <5
+    , binary >=0.8.7.0
+    , bytestring >=0.10.10.0
+    , errors >=2.3.0
+    , exceptions >=0.10.4
+    , mtl >=2.2.2
+    , network >=3.1.1.1
+    , network-simple-sockaddr >=0.3
+    , pipes >=4.3.13
+    , pipes-concurrency >=2.0.12
+    , pipes-network >=0.6.5
+  default-language: Haskell2010
